--- a/src/Styles/Home.scss
+++ b/src/Styles/Home.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color: aliceblue;
+//   color: aliceblue;
   //
   &__titleA,
   &__titleB {
@@ -18,7 +18,7 @@
 
     em {
       font-weight: 600;
-      color: rgb(254, 250, 250);
+      color: rgb(255, 255, 255);
     }
   }
 }
