--- a/src/Styles/NavBar.scss
+++ b/src/Styles/NavBar.scss
@@ -2,25 +2,26 @@
   display: flex;
   justify-content: space-around;
   background-color: #0f0e0e;
-  padding: 1rem;  
-  
+  padding: 1rem;
+  margin-bottom: 50px; // PLaced for now 
+
   &__link {
     color: rgb(239, 236, 236);
     text-decoration: none;
     font-size: 1rem;
-    padding: 0.5rem; 
+    padding: 0.5rem;
     transition: color 0.3s ease;
-  
+
     &:hover {
       color: #368984;
     }
   }
 
-  &__title { 
-     margin: 0;
+  &__title {
+    margin: 0;
     font-size: 1.5rem;
     color: #333;
-  
+
     &:hover {
       color: #236c67;
     }
@@ -29,7 +30,6 @@
   &__link--active {
     color: #007bff;
     border-bottom: 2px solid #007bff;
-    font-weight: bold; 
-  
+    font-weight: bold;
   }
 }
