--- a/src/Styles/NavBar.scss
+++ b/src/Styles/NavBar.scss
@@ -3,7 +3,7 @@
   justify-content: space-around;
   background-color: #0f0e0e;
   padding: 1rem;
-  margin-bottom: 50px; // PLaced for now 
+  margin-bottom: 50px; // Placeholder for now
 
   &__link {
     color: rgb(239, 236, 236);
