--- a/src/Styles/About.scss
+++ b/src/Styles/About.scss
@@ -1,7 +1,6 @@
 .About {
-  // Background and general styling
-  // background: #f4f4f4; // Example background color
-  color: #f9f6f6; // Primary text color
+  
+  color: #f9f6f6; 
   padding: 20px;
 
   .section {
@@ -22,7 +21,7 @@
     p {
       line-height: 1.6;
       em {
-        color: #ff5200;
+        color: #00b16a;
         font-style: italic;
       }
     }
