--- a/src/Styles/Projects.scss
+++ b/src/Styles/Projects.scss
@@ -1,13 +1,83 @@
 .Projects {
-  height: 100vh;
-  display: flex;
-  text-align: center;
-    // justify-content: space-evenly;
-  border: 1px solid rgb(46, 228, 125);
-  &__card {
-    height: 80vh;
-    border: 1px solid aliceblue;
-    width: 500px;
-    margin: 0 auto;
+  border: 1px solid rgba(255, 255, 255, 0.125);
+
+  &__container {
+    backdrop-filter: blur(16px) saturate(180%);
+    background-color: rgba(155, 189, 252, 0.25);
+    border-radius: 50%; //
+    display: flex;
+    padding: 38px;
+
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 100vh;
   }
+
+  &__wrapper {
+    width: 50%;
+    height: 100%;
+  }
+
+  &__banner-image {
+    background-color: rgba(76, 82, 93, 0.438);
+    backdrop-filter: blur(16px) saturate(180%);
+    filter: drop-shadow(0 30px 10px rgba(0, 0, 0, 0.125));
+    background-position: center;
+    background-size: cover;
+    height: 500px;
+    width: 100%; //
+    border-radius: 15px;
+    border: 1px solid rgba(255, 255, 255, 0.255);
+
+    img {
+      width: 300px;
+      border-radius: 12px;
+    }
+  }
+  h1 {
+    color: rgba(255, 255, 255, 0.98);
+    text-transform: uppercase;
+    font-size: 1.4rem;
+  }
+
+  p {
+    color: #fff;
+
+    text-align: center;
+    font-size: 0.8rem;
+    line-height: 150%;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+  }
+  &__button-wrapper {
+    margin-top: 18px;
+    z-index: 900;
+    position: relative;
+  }
+
+  &__btn {
+    border: none;
+    padding: 12px 24px;
+    border-radius: 24px;
+    font-size: 12px;
+    font-size: 0.8rem;
+    letter-spacing: 2px;
+    cursor: pointer;
+  }
+}
+
+.outline {
+  background: transparent;
+  color: #007bff;
+  border: 1px solid rgba(0, 212, 255, 0.6);
+  transition: all 0.3s ease;
+}
+
+.outline:hover {
+  transform: scale(1.125);
+  color: rgba(255, 255, 255, 0.9);
+  border-color: rgba(255, 255, 255, 0.9);
+  transition: all 0.3s ease;
 }
