--- a/src/Styles/Home.scss
+++ b/src/Styles/Home.scss
@@ -34,13 +34,13 @@
   }
 
   &__name {
-    color: aqua;
+    color: #007bff;
   }
 
   &__bio,
   &__textSlider {
     margin-bottom: 20px;
-    color: aquamarine;
+    color: #007bff;
   }
   &__textSlider {
     height: 50px;
