workingon skills card, layout and responsiveness.. Also added redirects for deployment

--- a/src/Styles/About.scss
+++ b/src/Styles/About.scss
@@ -2,7 +2,7 @@
   max-width: 90vw;
   margin:auto;
   color: #f9f6f6; 
-  padding: 20px;
+  // padding: 20px;
 
   .section {
     margin-bottom: 30px;
@@ -17,6 +17,7 @@
     h2 {
       color: #007bff;
       margin-bottom: 10px;
+    text-align: center;
     }
 
     p {
