--- a/src/Styles/Projects.scss
+++ b/src/Styles/Projects.scss
@@ -20,11 +20,9 @@
     overflow: hidden;
     width: 300px;
     height: 100%;
-
     border-radius: 15px;
     .Projects__banner-image {
       border: 1px solid rgb(154, 147, 147);
-
       position: relative;
       overflow: hidden;
       height: 100%;
@@ -37,7 +35,6 @@
 
       .Projects__title {
         border-bottom: 1px solid rgb(208, 213, 210, 0.5);
-
         display: flex;
         justify-content: center;
         align-items: center;
@@ -79,19 +76,14 @@
         filter: drop-shadow(0 30px 20px rgba(0, 0, 0, 0.125));
         background-position: center;
         background-size: cover;
-
         text-align: center;
       }
     }
   }
 }
-
+// desktop queries
 @media screen and (min-width: 1024px) {
   .Projects {
-    .Projects__container {
-   
-    }
-
     .Projects__wrapper {
       transition: transform 0.3s ease-out;
       &:hover {
@@ -129,29 +121,27 @@
 
 @media screen and (max-width: 767px) {
   .Projects {
+    width: 80%;
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
+
     .Projects__wrapper {
       border: 1px solid rgb(206, 206, 243);
-      height: 60%;
+      height: 90%;
       width: 100%;
       border-radius: 15px;
       .Projects__banner-image {
         position: relative;
         display: flex;
         flex-direction: column;
+
         img {
           width: 100%;
           transition: transform 3.5s ease-out;
         }
-        h2 {
-        }
+
         p {
           opacity: 1;
-        }
-
-        .Projects__title {
-          text-decoration: underline;
         }
       }
     }
