--- a/src/Styles/Skills.scss
+++ b/src/Styles/Skills.scss
@@ -1,17 +1,18 @@
 .SkillsContainer {
-  //   border: 2px solid blueviolet;
   max-width: 90vw;
   margin: auto;
-  overflow: auto;
-  height: 100vh;
+  overflow-y: scroll;
+  max-height: 100vh;
+  // background-color: #0078d7;
 }
 .Skills {
+  margin: 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 20px;
-  padding-bottom: 4%;
   align-items: center;
+  gap: 20px;
+  // padding-bottom: 4%;
 
   &__card-container {
     border: 1px solid #000000;
@@ -241,7 +242,8 @@
   }
 }
 
-// Media Queires
+// Media Queries
+//*----------------------- MOBILE SCREENs ---------------------------------
 @media only screen and (max-width: 768px) {
   .buttons {
     button {
@@ -249,7 +251,6 @@
     }
   }
   .Skills {
-    border: 3px solid red;
     display: flex;
     flex-wrap: nowrap;
     overflow-x: auto;
@@ -266,3 +267,4 @@
     }
   }
 }
+//*----------------------------------------------------------------
