--- a/src/Styles/Contact.scss
+++ b/src/Styles/Contact.scss
@@ -1,244 +1,41 @@
-
 .Contact {
-  height: 100vh;
-  align-items: center;
-  justify-content: center;
-
-  &__title {
-    text-align: center;
-    margin: 0 auto;
-    font: 300 60px "Oswald", sans-serif;
-    color: #000000;
-    text-transform: uppercase;
-    letter-spacing: 6px;
-  }
-  //  Wraps the form and the right side
-  &__contact-wrapper {
-    background: rgba(255, 255, 255, 0.2);
-    border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 0 auto;
-    padding: 20px;
-    position: relative;
-    max-width: 840px;
-  }
-
-  &__form-horizontal {
-    max-width: 400px;
-    font-family: "Lato";
-    font-weight: 400;
-  }
-  //
-  &__form-group input,
-  textArea {
-    //TODO: increase size
-    width: 350px;
-    margin: 10px;
-  }
-  &__form-control,
-  textArea {
-    max-width: 400px;
-    background-color: #c0c0c0;
-    color: #00b16a;
-    letter-spacing: 1px;
-    resize: none;
-  }
-
-  &__btn {
-    margin-top: 15px;
-    height: 34px;
-    margin: 10px;
-    width: 350px;
-    overflow: hidden;
-    transition: all 0.2s ease-in-out;
-    color: #0078d7;
-  }
-  //   * btn text: SEND
-  &__alt-send-button {
-    font-size: 20px;
-    width: 100%;
-    height: 34px;
-    margin-top: 5px;
-    transition: all 0.2s ease-in-out;
-
-    &:hover {
-      transform: translate3d(0px, -29px, 0px);
-      color: #00b16a;
-    }
-  }
-  //* The send icon that appears when btn is hovered before clikcing
-  &__send-text {
+  // background-color: aqua;
+  height: 10dvh;
+  width: 10dvw;
+  position: sticky;
+  z-index: 100;
+  bottom: 0;
+  &__pop {
+    background-color: black;
+    transform: rotate(-90deg);
     display: block;
-    // margin: 0 auto;
-    letter-spacing: 2px;
-    font-size: 20px;
-    bottom: 90px;
-  }
-
-  //! RIGHT SIDE : Location, Phone #, Email, Socials
-  .fa-map-marker,
-  .fa-phone,
-  .fa-envelope {
-    font-size: 25px;
-  }
-
-  &____direct-contact-container {
-    max-width: 350px;
-  }
-  &__list-item {
-    list-style: none;
-    line-height: 3;
-    color: #c0c0c0;
-  }
-  &__contact-text {
-    font: 300 18px "Lato", sans-serif;
-    letter-spacing: 1px;
-    color: #000000;
-  }
-
-  .phone,
-  .gmail,
-  .place {
-    margin-left: 50px;
-  }
-  &__contact-text a {
-    text-transform: uppercase;
-    color: #000000;
-    text-decoration: none;
-    transition-duration: 0.2s;
-    &:hover {
-      color: #0078d7;
-      text-decoration: none;
-    }
-  }
-  //! Socials : Icon List
-  .fa-spotify,
-  .fa-twitter,
-  .fa-instagram,
-  .fa-github {
-    display: grid;
-    place-content: center;
-    margin-top: 15px;
-  }
-
-  &__social-media-list {
-    //? I might need to adjust the icon sizes
-    font-size: 25px;
-    position: relative;
     text-align: center;
-    width: 100%;
-    margin: 0 auto;
-    padding: 0;
+    background-color: inherit;
+    color: inherit;
 
-    li {
-      list-style: none;
-      position: relative;
-      display: inline-block;
-      height: 60px;
-      width: 60px;
-      margin: 10px 5px;
-      line-height: 60px;
-      border-radius: 50%;
-      color: #fff;
+    &:hover {
       cursor: pointer;
-      background-color: rbg(27, 27, 27);
-      transition: all 0.2s ease-in-out;
-
-      //* Change to white when hovered
-      &:hover {
-        background-color: #c0c0c0;
-      }
-      //* That white background that appears when hovered
-      &:after {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 60px;
-        height: 60px;
-        line-height: 60px;
-        border-radius: 50%;
-        opacity: 0;
-        box-shadow: 0 0 0 2px #d5dbdf;
-        transition: all 0.2s ease-in-out;
-      }
-      //* That outter white border that appears when hovered
-      &:hover:after {
-        opacity: 1;
-        transform: scale(1.12);
-        transition-timing-function: cubic-bezier(0.37, 0.74, 0.15, 1.65);
-      }
-
-      //* changing Icon color when hovered
-      &:hover a {
-        color: #000;
-      }
-      a {
-        color: #fff;
-      }
+      background-color: whitesmoke;
+      color: black;
     }
+  }
+
+  &__form-image {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-bottom: 20px;
   }
 }
+// color: #00b16a;
+// color: #0078d7;
 
-//! Mobile Responsiveness
+// //! Mobile Responsiveness
 
-@media only screen and (max-width: 600px) {
-  #contact-form {
-    display: none;
-  }
-  .Contact {
-    &__contact-wrapper {
-      padding: 50px;
-    }
-    &__social-media-list {
-      display: flex;
-
-      li {
-        background-color: black;
-        transition: all 0.2s ease-in-out;
-        //* Change to white when hovered
-        &:hover {
-          background-color: #c0c0c0;
-        }
-        //* changing Icon color when hovered
-        &:hover a {
-          color: #000;
-        }
-        a {
-          color: #fff;
-        }
-      }
-    }
-    // Adress / Phone / email
-    &__contact-list {
-      margin: 10px;
-      // border: 2px solid red;
-    }
-    &__list-item {
-      // border: 2px solid blue;
-      position: relative;
-      right: 7%;
-      width: auto;
-    }
-    &__contact-text {
-      position: relative;
-      right: 18%;
-      font-size: 12.5px;
-      font-weight: 400;
-    }
-  }
-  .Contact__fa {
-    color: #fff;
-  }
-  @media only screen and (max-width: 1240px) {
-    .Contact {
-      height: 100%;
-    }
-  }
-}
+// @media only screen and (max-width: 600px) {
+// }
+// @media only screen and (max-width: 1240px) {
+//   .Contact {
+//     height: 100%;
+//   }
+// }
