--- a/src/Styles/Projects.scss
+++ b/src/Styles/Projects.scss
@@ -1,86 +1,91 @@
 .Projects {
   margin: auto;
   max-width: 90vw;
-  height: 100vh;
+  max-height: 100vh;
+  overflow-y: scroll;
+  padding: 20px 0 20px 0;
+  z-index: 100;
+  position: relative;
+}
 
-  .Projects__container {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    height: 90%;
-    gap: 10px;
-  }
+.Projects__container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 
-  .Projects__wrapper {
-    margin: auto;
-    cursor: pointer;
+  gap: 10px;
+}
+
+.Projects__wrapper {
+  margin: auto;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  width: 300px;
+  height: 900px;
+  border-radius: 15px;
+
+  .Projects__banner-image {
+    border: 1px solid rgb(154, 147, 147);
     position: relative;
     overflow: hidden;
-    width: 300px;
     height: 100%;
-    border-radius: 15px;
-    .Projects__banner-image {
-      border: 1px solid rgb(154, 147, 147);
-      position: relative;
-      overflow: hidden;
+    img {
+      width: 100%;
       height: 100%;
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        transition: transform 3.5s ease-out;
-      }
+      object-fit: cover;
+      transition: transform 3.5s ease-out;
+    }
 
-      .Projects__title {
-        border-bottom: 1px solid rgb(208, 213, 210, 0.5);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-      h2 {
-        a {
-          display: block;
-        }
-        position: absolute;
-        background-color: rgb(239, 236, 236);
-        top: 0;
-        height: 50px;
-        color: rgb(20, 20, 20);
-        text-transform: uppercase;
-        font-size: 1.4rem;
-        width: 100%;
-      }
-
-      p {
-        opacity: 0;
+    .Projects__title {
+      border-bottom: 1px solid rgb(208, 213, 210, 0.5);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    h2 {
+      a {
         display: block;
-        position: absolute;
-        text-align: center;
-        justify-content: center;
-        font-size: 1rem;
-        color: rgb(243, 240, 240);
-        line-height: 150%;
-        letter-spacing: 2px;
-        text-transform: uppercase;
-        bottom: 20px;
-        left: 20px;
-        right: 20px;
       }
+      position: absolute;
+      background-color: rgb(239, 236, 236);
+      top: 0;
+      height: 50px;
+      color: rgb(20, 20, 20);
+      text-transform: uppercase;
+      font-size: 1.4rem;
+      width: 100%;
+    }
 
-      .Projects__title,
-      p {
-        background-color: rgba(65, 70, 80, 0.438);
-        backdrop-filter: blur(20px) saturate(180%);
-        filter: drop-shadow(0 30px 20px rgba(0, 0, 0, 0.125));
-        background-position: center;
-        background-size: cover;
-        text-align: center;
-      }
+    p {
+      opacity: 0;
+      display: block;
+      position: absolute;
+      text-align: center;
+      justify-content: center;
+      font-size: 1rem;
+      color: rgb(243, 240, 240);
+      line-height: 150%;
+      letter-spacing: 2px;
+      text-transform: uppercase;
+      bottom: 20px;
+      left: 20px;
+      right: 20px;
+    }
+
+    .Projects__title,
+    p {
+      background-color: rgba(65, 70, 80, 0.438);
+      backdrop-filter: blur(20px) saturate(180%);
+      filter: drop-shadow(0 30px 20px rgba(0, 0, 0, 0.125));
+      background-position: center;
+      background-size: cover;
+      text-align: center;
     }
   }
 }
+
 // desktop queries
 @media screen and (min-width: 1024px) {
   .Projects {
