--- a/src/Styles/Skills.scss
+++ b/src/Styles/Skills.scss
@@ -1,18 +1,18 @@
 .SkillsContainer {
   max-width: 90vw;
   margin: auto;
-  overflow-y: scroll;
-  max-height: 100vh;
-  // background-color: #0078d7;
+  // overflow-y: scroll;
+  max-height: auto;
+  margin-bottom: 20px;
 }
 .Skills {
-  margin: 0;
+  // margin: 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   gap: 20px;
-  // padding-bottom: 4%;
+  padding-bottom: 4%;
 
   &__card-container {
     border: 1px solid #000000;
