--- a/src/Styles/Home.scss
+++ b/src/Styles/Home.scss
@@ -72,10 +72,6 @@
 
     &__scr-bg {
       width: 100vw;
-
-      img {
-        // width: 43%;
-      }
     }
 
     &__scr-info {
@@ -85,22 +81,45 @@
 }
 
 @media only screen and (max-width: 768px) {
+//   .Home {
+//     height: 120vh;
+//     &__background {
+//       display: none;
+//     }
+//     &__scr-bg {
+//       bottom: 0;
+
+//       img {
+//         width: 0%;
+//       }
+//     }
+//     &__name,
+//     &__textSlider {
+//       color: whitesmoke;
+//     }
+//   }
+}
+///tablet
+@media only screen and (max-width: 1180px) {
   .Home {
-    height: 120vh;
     &__background {
       display: none;
     }
     &__scr-bg {
-      bottom: 40%;
-      top: 40%;
+      bottom: 0;
+
       img {
-        width: 100%;
+        width: 80%;
       }
+    }
+    &__scr-info {
+      top: 20dvh;
+      width: 100%;
+      gap: 25px;
     }
     &__name,
     &__textSlider {
-      color: whitesmoke;
-      width: 100%;
+      color: aliceblue;
     }
   }
 }
