--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -15,8 +16,5 @@ body {
 code {
   font-family: "Merriweather", sans-serif;
 }
-section {
-  padding-top: 100px;
-  margin-top: -60px;
-}
+
 /* Added section here tempo - keeps nav bar from blocking content at top lvl */
