Fixed an issue where elements on pages were not fully in view. partially hidden

--- a/src/Styles/Skills.scss
+++ b/src/Styles/Skills.scss
@@ -1,6 +1,7 @@
 .SkillsContainer {
   max-width: 90vw;
   margin: auto;
+  padding-top: 120px;
   // overflow-y: scroll;
   max-height: auto;
   margin-bottom: 20px;
