--- a/src/Styles/Projects.scss
+++ b/src/Styles/Projects.scss
@@ -6,14 +6,15 @@
   padding: 20px 0 20px 0;
   z-index: 100;
   position: relative;
-}
+  margin-bottom: 10px;
 
-.Projects__container {
-  padding-top: 120px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
+  &__container {
+    padding-top: 120px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .Projects__wrapper {
