--- a/src/Styles/Socials.scss
+++ b/src/Styles/Socials.scss
@@ -44,6 +44,7 @@
   .Socials {
     &__media-list {
       margin-right: 40px;
+      margin-top: 400px;
       li {
         background-color: rgb(247, 244, 244, 0.4);
       }
