--- a/src/Styles/Projects.scss
+++ b/src/Styles/Projects.scss
@@ -1,29 +1,23 @@
 .Projects {
   margin: auto;
   max-width: 90vw;
-  max-height: 100vh;
-  overflow-y: scroll;
+  max-height: 90vh;
   padding: 20px 0 20px 0;
   z-index: 100;
   position: relative;
   margin-bottom: 10px;
 
   &__container {
-    padding-top: 120px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+    margin-bottom: 120px;
   }
 }
 
 .Projects__wrapper {
-  margin: 20px;
+  margin: 50px;
   cursor: pointer;
   position: relative;
   overflow: hidden;
-  width: 300px;
-  height: 900px;
+  height: 50vh;
   border-radius: 15px;
 
   .Projects__banner-image {
@@ -69,9 +63,9 @@
       line-height: 150%;
       letter-spacing: 2px;
       text-transform: uppercase;
-      bottom: 20px;
+      bottom: 25%;
       left: 20px;
-      right: 20px;
+      right: 25px;
     }
 
     .Projects__title,
@@ -127,17 +121,15 @@
 @media screen and (max-width: 767px) {
   .Projects {
     width: 80%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    overflow-y: auto;
-    -webkit-overflow-scrolling: touch;
+    height: 80%;
+
 
     &__wrapper {
       border: 1px solid rgb(206, 206, 243);
-      height: 100%;
-      border-radius: 15px;
+      // height: 100%;
+  
+
+
     }
     .Projects__banner-image {
       position: relative;
@@ -150,8 +142,9 @@
         transition: transform 3.5s ease-out;
       }
       p {
+        bottom: 15%;
         opacity: 1;
-        font-size: 10px;
+        font-size: 14px;
       }
     }
   }
